[chats] option to enable comma after mention