@@ -6266,7 +6266,7 @@ public class MessageObject {
                             return null;
                         }
                         try {
-                            return "athumb://itunes.apple.com/search?term=" + URLEncoder.encode(performer + " - " + title, StandardCharsets.UTF_8) + "&entity=song&limit=4" + (small ? "&s=1" : "");
+                            return "athumb://itunes.apple.com/search?term=" + URLEncoder.encode(performer + " - " + title, "UTF-8") + "&entity=song&limit=4" + (small ? "&s=1" : "");
                         } catch (Exception ignore) {
 
                         }
